...
                    <view key="view" multipleTouchEnabled="YES" contentMode="scaleToFill" id="3se-qz-xqx" customClass="SKView">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Alien Survival" id="oTg-pL-QhW"/>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2856.8000000000002" y="-415.14242878560725"/>
        </scene>
        <!--Stats-->
        <scene sceneID="Xnm-MI-nCc">
            <objects>
                <viewController id="D1D-nx-G1E" userLabel="Stats" customClass="StatsViewController" customModule="Jump" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="9gw-Yr-D56"/>
                        <viewControllerLayoutGuide type="bottom" id="f7W-Mr-HqP"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="14Y-Bd-pn3">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Overall Stats:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u3O-bF-miV">
                                <rect key="frame" x="10" y="358" width="102" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Stats:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DDL-M9-Gj5">
...
            </objects>
            <point key="canvasLocation" x="1076" y="161"/>
        </scene>
        <!--Settings-->
        <scene sceneID="y6T-np-2Of">
            <objects>
                <viewController id="59g-dH-gqd" userLabel="Settings" customClass="SettingViewController" customModule="Jump" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="CJF-bN-EE8"/>
                        <viewControllerLayoutGuide type="bottom" id="Cih-Ks-ZyV"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8wx-ox-O6t">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
...
                            <constraint firstItem="kkn-Ks-cX4" firstAttribute="top" secondItem="0eA-gB-ubc" secondAttribute="bottom" constant="15" id="pzn-GF-FMb"/>
                            <constraint firstItem="kkn-Ks-cX4" firstAttribute="leading" secondItem="4vJ-eq-K6n" secondAttribute="leading" constant="30" id="tlj-Uh-cXm"/>
                            <constraint firstItem="GD1-UQ-cWD" firstAttribute="centerY" secondItem="4vJ-eq-K6n" secondAttribute="centerY" id="vya-eq-6bn"/>
                            <constraint firstItem="0eA-gB-ubc" firstAttribute="top" secondItem="ZSM-YD-L7b" secondAttribute="bottom" constant="30" id="y9L-vu-uE1"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Info" id="Tw4-8i-yW2"/>
                    <connections>
                        <outlet property="howLabel2" destination="rtU-MC-EZR" id="exo-pN-aNj"/>
                        <outlet property="objectLabel" destination="0eA-gB-ubc" id="d3R-6a-syn"/>
                        <outlet property="survivalLabel" destination="kkn-Ks-cX4" id="T9t-TK-RR3"/>
                        <outlet property="uitlegGame" destination="vjw-Ia-hhb" id="AeI-0P-h83"/>
                    </connections>
...
                            <outlet property="dataSource" destination="f1H-jZ-1FD" id="l33-MO-l7q"/>
                            <outlet property="delegate" destination="f1H-jZ-1FD" id="NGe-ka-c1r"/>
                        </connections>
                    </tableView>
                    <toolbarItems>
                        <barButtonItem style="plain" systemItem="flexibleSpace" id="xAh-W0-3yj"/>
                        <barButtonItem title="ℹ️" id="QVV-DY-GBE">
                            <connections>
                                <segue destination="ubU-2V-GQb" kind="show" identifier="info" id="MKy-a8-80e"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem style="plain" systemItem="flexibleSpace" id="pve-d5-tSX"/>
                    </toolbarItems>
                    <navigationItem key="navigationItem" title="Menu" id="rA8-nX-7hQ">
                        <barButtonItem key="leftBarButtonItem" systemItem="stop" id="7rH-1J-ntr">
                            <connections>
                                <action selector="exitNowWithSender:" destination="f1H-jZ-1FD" id="yAz-Ld-L8y"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
