...

class TableViewController: UITableViewController {
    
    var arrayOfCellData = [cellData]()

    override func viewDidLoad() {
        arrayOfCellData = [cellData(cell : 1, text: "Play", image: #imageLiteral(resourceName: "hudPlayer_yellow")),
                           cellData(cell : 2, text: "Stats", image : #imageLiteral(resourceName: "hudJewel_green")),
                           cellData(cell : 3, text: "Settings", image : #imageLiteral(resourceName: "hudKey_green"))]
        
        self.view.backgroundColor = UIColor(patternImage: #imageLiteral(resourceName: "colored_grass"))
        
        self.navigationController?.isToolbarHidden = false
...
